[package]
name = "etree"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bigdecimal = "0.2.0"
clap = "2.33.3"
log = "0.4.11"
nom = "6.0.1"
stderrlog = "0.5.0"
